AKS/webhook.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: ingress-nginx-admission
webhooks:
- name: validate.nginx.ingress.kubernetes.io
  clientConfig:
    service:
      name: ingress-nginx-controller-admission
      namespace: ingress-nginx
      path: "/networking/v1/ingresses"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJkVENDQVJ1Z0F3SUJBZ0lRTm1raGxhcGxzZnU1UmpRNWtCSktrakFLQmdncWhrak9QUVFEQWpBUE1RMHcKQ3dZRFZRUUtFd1J1YVd3eE1DQVhEVEkwTURjeU16RXdORGt4TVZvWUR6SXhNalF3TmpJNU1UQTBPVEV4V2pBUApNUTB3Q3dZRFZRUUtFd1J1YVd3eE1Ga3dFd1lIS29aSXpqMENBUVlJS29aSXpqMERBUWNEUWdBRVhVaFZmZmpTClZISGk0dkJUd05HaGg0d29HZlJkSlJSTlUrcHcrZmhqeXdpaG9OTWJ2dkZMbGMrcjJEc2JndE0wSlFyUVArVC8KczRLcEdCWER5RDF0MUtOWE1GVXdEZ1lEVlIwUEFRSC9CQVFEQWdJRU1CTUdBMVVkSlFRTU1Bb0dDQ3NHQVFVRgpCd01CTUE4R0ExVW [...]
  rules:
  - operations:
    - CREATE
    - UPDATE
    apiGroups:
    - networking.k8s.io
    apiVersions:
    - v1
    resources:
    - ingresses
  admissionReviewVersions:
  - v1
  timeoutSeconds: 10
  sideEffects: None
